[gd_scene load_steps=4 format=3 uid="uid://km1ruitv2bms"]

[ext_resource type="Script" path="res://scripts/entities/radio system.gd" id="1_88mmj"]
[ext_resource type="PackedScene" uid="uid://cs1tc2jj7ctle" path="res://prefabs/entities/simon.tscn" id="2_o5lr3"]
[ext_resource type="PackedScene" uid="uid://d3euo8tp4chxy" path="res://prefabs/entities/3d_button.tscn" id="3_82t1x"]

[node name="radio system" type="Node3D" node_paths=PackedStringArray("Simon") groups=["radio"]]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0.0784899, 0, 0.0861496)
script = ExtResource("1_88mmj")
Simon = NodePath("simon display")

[node name="simon display" parent="." instance=ExtResource("2_o5lr3")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0.00998297, -0.254991, 0.538732)

[node name="radio" parent="." instance=ExtResource("3_82t1x")]
transform = Transform3D(0.0999848, 0, -0.00174175, 0, 0.1, 0, 0.00174175, 0, 0.0999848, 0.007, -0.194979, 0.784008)

[node name="red" parent="." instance=ExtResource("3_82t1x")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.0674521, -0.217545, 0.620212)

[node name="yellow" parent="." instance=ExtResource("3_82t1x")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.0761627, -0.226279, 0.468873)

[node name="green" parent="." instance=ExtResource("3_82t1x")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.0775591, -0.224532, 0.611057)

[node name="blue" parent="." instance=ExtResource("3_82t1x")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.072592, -0.222953, 0.477706)

[connection signal="clicked" from="radio" to="." method="_on_radio_clicked"]
[connection signal="clicked" from="red" to="." method="_on_red_clicked"]
[connection signal="clicked" from="yellow" to="." method="_on_yellow_clicked"]
[connection signal="clicked" from="green" to="." method="_on_green_clicked"]
[connection signal="clicked" from="blue" to="." method="_on_blue_clicked"]
